@@ -85,7 +85,7 @@ DEFAULT_VALUE VALIDATE_MULTIPLICITY "Yes"
 GUI CHOICE VALIDATE_MULTIPLICITY Yes%No Validate Attribute/Role Multiplicity:
 DEFAULT_VALUE VALIDATE_CONFIG ""
 GUI OPTIONAL FILENAME VALIDATE_CONFIG ilivalidator_Configuration_Files(*.ini)|*.ini|All_Files|*.* Validator Configuration:
-DEFAULT_VALUE ILI1_IGNOREPOLYGONBUILDINGERRORS "Yes"
+DEFAULT_VALUE ILI1_IGNOREPOLYGONBUILDINGERRORS "No"
 GUI CHOICE ILI1_IGNOREPOLYGONBUILDINGERRORS Yes%No ITF Ignore Polygon Building Errors:
 DEFAULT_VALUE GEOMETRY_ENCODING "FMEBIN"
 GUI CHOICE GEOMETRY_ENCODING FMEXML%FMEBIN%FMEHEXBIN%OGCHEXBIN Geometry Encoding:
